styles/base.css
/* General Body Styling */
body {
    font-family: 'Raleway', sans-serif;
    line-height: 1.6;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
}







/* Header Styling */
header {
    background: #333;
    color: #fff;
    padding: 20px 0;
    text-align: center;
    display: flex; 
    align-items: center; 
    justify-content: center; 
}

header img {
    max-width: 100px;
    height: auto;
    margin-right: 20px; 
    border-radius: 7px;
}



/* Navigation Bar Styling */

nav {
	max-width: 100%;
	margin: 0px auto;
    padding: 0px;
    
}


/* small view navigation */
#menu {
	font-size: 1.5rem;
	border: 1px solid rgba(0,0,0,.3);
	padding: 3px 7px 6px;
	background-color: #eee;
	color: #000;
 	position: fixed;
	top: 0;
	right: 0;
}

#menu::before {
	content: "☰";
}

#menu.open::before {
	content: "✖️";
}

.navigation {
	display: flex;
	flex-direction: column;
	list-style: none;
	background-color: #444;
	color: #fff;
    padding: 0px;
    margin: 0px;

}
.navigation li {
	display: none;
}
.navigation li a {
	display: block;
	padding: 1rem ;
	text-align: center;
	text-decoration: none;
	color: #fff;
}
.navigation li a:hover {
	background-color: #555;
	color: #e6e5e5;
	font-weight: 700;
    padding-left: 0px;
    
   
}


/* 
when the button is clicked - the open class is toggle (added/removed) and accounted for here */
.open li {
	display: block;
	width: 100%;
}
.open li a {
	display: block;
}

.active::before {
	content: "| ";
  
}
.active::after {
	content: " |";
  
}





.navigation li a.active {
    font-weight: bold;
    
}
.navigation a {
    padding-left: 0;
}





/* Main Content Styling */

main {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 5px; 
    padding: 20px;
    max-width: 960px; 
    margin: 0 auto; 
}

main h2 {
    text-align: center;
    border-bottom: .5px solid #000; 
    padding-bottom: 10px; 
    margin-bottom: 20px; 

}


.hero {
	position: relative;
    grid-column: 1/-1;
}
.hero img {

    width: 100%;
    height: auto;
    object-fit: cover;
}

 .herolabel {
    position: absolute;
    top: 20px;
    right: 15px;
    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(10px);
    border: 1px solid rgba(255, 255, 255, 0.25);
    padding: .5rem;
    box-shadow: 0 0 1rem rgba(51, 51, 51, 0.5);
    opacity: 0.95;
} 


.herolabel p {
	margin: 0;
    color: #333;
	padding: .05rem;
	font-weight: 700;
	font-size: 1rem;
}


/* Card Section Styling */
.card {
    background: #fff;
    margin-bottom: 20px;
    padding-bottom: 5px;
    border-radius: 5px;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.card h3 {
    background-color: #555; 
    text-align: center;
    color: white;
    margin: 0; 
    padding: 10px 20px;
    border-radius: 3px 3px 0 0; 
}


.card ul {
    counter-reset: list-counter; 
    list-style-type: none; 
    padding-left: 0; 
}

.card ul li {
    counter-increment: list-counter; 
    margin-bottom: 5px; 
    margin-left: 20px;
    padding-right: 5px;
}

.card ul li:before {
    content: counter(list-counter, decimal-leading-zero) ": "; 
    margin-right: 5px; 
}


.card p {
    text-align: center; 
    margin-left: auto;
    margin-right: auto;
}




a:active,
a:link,
a:visited
     {
    text-decoration: none;
	color: rgb(0, 105, 0);
}


.card a:hover {
    color: #333;
    font-weight: bold;
}



.google-map {
    width: 100%;
    max-width: 800px; 
    height: 450px; 
    margin: 0px 10px 20px 10px; 
    display: flex;
    justify-content: center; 
    align-items: center; 
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);

}



/* Footer Styling */
footer {
    background: #333;
    color: #fff;
    text-align: center;
    padding: 20px 0;
}



@media screen and (max-width: 400px) {
    .herolabel {
        position: absolute;
        top: 10px;
        right: 10px;
        max-width: 20%;
        padding: .25rem;
    } 
    
    
    .herolabel p {
        margin: 0;
        padding: .05rem;
        font-size: .5rem;
    }
}

